<resources>
    <string name="app_name">SUK App</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="logo_image">Logo Image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="please_login_to_continue">Please Login to Continue.</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="official_site">Official Site</string>
    <string name="help_center">Help Center</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="events">Events</string>
    <string name="academic">Academic</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="sharnbasva_university_kalaburagi">Sharnbasva University, Kalaburagi</string>
    <string name="department_of_mca">Department of MCA</string>
    <string name="logo">Logo</string>
    <string name="please_register_to_continue">Please Register to Continue</string>
    <string name="usn">USN</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="old_user">Old User?</string>
    <string name="verify_your_email_address">Verify your email address</string>
    <string name="mca_master_of_computer_applications">MCA - Master of Computer Applications</string>
    <string name="save_faculty">Save Faculty</string>
    <string name="default_spinner_text">No Data Available\n</string>
    <string name="pdf">PDF</string>
    <string name="save_course">Save Course</string>
    <string name="select_pdf">Select PDF</string>
    <string name="enter_course_title">Enter Course Title</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="faculty_profile">Faculty Profile</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_user_chat">UserChatActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="character_count_min_24">Character count min 24\n</string>
    <string name="character_count_min_300">Character count min 300</string>
    <string name="disconnect">Disconnect</string>
    <string name="other">Other</string>
    <string name="technical_assistance">Technical Assistance</string>
    <string name="technical_nassistance">Technical\nAssistance</string>
    <string name="active">Active</string>
    <string name="closed">Closed</string>
    <string name="loading">Loading…</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_new">Add New</string>
    <string name="complaint_text">Please copy the reference number by clicking on the above fab and save it somewhere for further assistance.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="check_status">Check Status</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="channel_name1">SUK\n</string>
    <string name="channel_name">Notice\n</string>
    <string name="channel_description">Content\n</string>
    <string name="skip">Skip</string>
    <string name="i_m_in">I\'m In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
</resources>