<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/coordinatorLayout"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="serif"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/logo"
            android:transitionName="logo_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/welcome_user"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="serif"
            android:text="@string/please_register_to_continue"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/usn">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usn_text"
                        android:layout_width="match_parent"
                        android:maxLength="10"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Phone Number"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/full_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords|textPersonName"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="30dp"
                        android:fontFamily="serif"
                        android:text="Gender"
                        android:textColor="@color/gray"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText,TextContrastCheck" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        tools:ignore="HardcodedText" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        tools:ignore="HardcodedText" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/email_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz1234567890@."
                        android:inputType="textEmailAddress"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Parent Name"
                    android:visibility="gone"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/parentNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Parent Phone"
                    android:visibility="gone"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/parentPhoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Address"
                    android:visibility="gone"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/text_shape"
                    android:elevation="0dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:onClick="openLoginPage"
                    android:text="@string/old_user"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <ImageView
        android:id="@+id/open_Sheet"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:scaleType="centerCrop"
        android:src="@drawable/remove_top"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
